cloud-infra-macros/tests/fails/zipfile_wrong_extension.stderr
error: zip file should end with `.zip`, instead found `package.tar.gz`
 --> tests/fails/zipfile_wrong_extension.rs:4:25
  |
4 |     let file = zipfile!("package.tar.gz");
  |                         ^^^^^^^^^^^^^^^^
